--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
         <!--your trainers section-->
         <section>
-            <h2>Your Trainers</h2>
+            <h2>Meet The Trainers</h2>
         </section>
 
         <!--reach out section-->
@@ -61,6 +61,11 @@
         <!--footer-->
         <footer>
             <h2>❤️ Made with love by Run Buddy.</h2>
+
+            <div>
+                <a href="#">Read Our Privacy Policy</a><br />
+                &copy; 2019 Run Buddy, Inc.
+            </div>
         </footer>
     </body>
 </html>
