--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
         </section>
 
         <!--reach out section-->
-        <section>
-            <h2>Reach Out</h2>
+        <section id="reach-out" class="contact">
+            <h2 class="section-title secondary-border">Reach Out</h2>
             <div class="contact-info">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3021.164232656834!2d-111.90072198434297!3d40.780403441364456!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8752f5b1fe2d01d3%3A0x2204dadd79455cb9!2s260%20W%20500%20N%2C%20Salt%20Lake%20City%2C%20UT%2084103!5e0!3m2!1sen!2sus!4v1618954144583!5m2!1sen!2sus" 
                 width="400" 
@@ -155,21 +155,21 @@
                 allowfullscreen="" 
                 loading="lazy">
                 </iframe>
-            </div>
-            <div>
-                <h3>Run Buddy</h3>
-                <p>
-                    Any questions or concerns before signing up?
-                    <br/>
-                    Let us know and we'll be happy to talk to you!
-                </p>
-                <address>
-                    55 Main Street <br/>
-                    Some Town, Ca <br/>
-                    12345<br/>
-                    P: 555.RUN.BUDZ (555.786.2839)<br/>
-                    E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
-                </address>
+                <div>
+                    <h3>Run Buddy</h3>
+                    <p>
+                        Any questions or concerns before signing up?
+                        <br/>
+                        Let us know and we'll be happy to talk to you!
+                    </p>
+                    <address>
+                        55 Main Street <br/>
+                        Some Town, Ca <br/>
+                        12345<br/>
+                        P: 555.RUN.BUDZ (555.786.2839)<br/>
+                        E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+                    </address>
+                </div>
             </div>
         </section>
 
